<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_events"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_travel"
            android:icon="@drawable/ic_travel"
            android:title="@string/menu_travel" />
        <item
            android:id="@+id/nav_communities"
            android:icon="@drawable/ic_communities"
            android:title="@string/menu_communities" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_profile" />
    </group>
</menu>